objects/BitBucket__c.object
<CustomObject>
    <label>BitBucket</label>
    <nameField>
        <label>BitBucket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BitBuckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployed to UAT</fullName>
                </value>
                <value>
                    <fullName>Deployed to STG</fullName>
                </value>
                <value>
                    <fullName>Deployed to INT</fullName>
                </value>
                <value>
                    <fullName>Deployed to PROD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Developer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lakshmikanth Katputur</fullName>
                </value>
                <value>
                    <fullName>Chaitanya Mandalapu</fullName>
                </value>
                <value>
                    <fullName>Pratyush Vinjam</fullName>
                </value>
                <value>
                    <fullName>Shilpa Seri</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BranchName__c</fullName>
        <label>BranchName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeployDate__c</fullName>
        <label>DeployDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Manager__c</fullName>
        <label>Release Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LK</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>PV</fullName>
                </value>
                <value>
                    <fullName>SS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>AMER</fullName>
        <active>true</active>
        <label>AMER</label>
    </recordTypes>
    <recordTypes>
        <fullName>APAC</fullName>
        <active>true</active>
        <label>APAC</label>
    </recordTypes>
</CustomObject>